댓글아이디숨김

--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -183,7 +183,8 @@
                             <td>
                                 <span class="t-hidden spanVisitorAccount">{{item1.visitorAccount.username}}</span>
                                 <img class="t-w-[22px] t-h-[22px] t-rounded-full t-object-fit t-inline-block"
-                                     src="{{ item1.visitorAccount.profile_img.url }}"/>{{item1.visitorAccount.name}}
+                                     src="{{ item1.visitorAccount.profile_img.url }}"/>
+<!--                                {{item1.visitorAccount.name}}-->
                                 <div class="control hidden" id="control_id{{ forloop.counter0 }}">
                                 <ul class="d-flex justify-content-center">
                                     <li class="modifyReview{{ item1.id }}">
