라켓이미지수정

--- a/templates/racket/racketDetail.html
+++ b/templates/racket/racketDetail.html
@@ -24,7 +24,8 @@
                     <div class="card-header">
                         <div class="d-flex justify-content-center ">
                             <img class="fadein mt-3 t-bg-white sm:t-max-w-sm" width="100%"
-                                 src="{{racketItems.thumb_img_url}}"></div>
+                                 src="{{racketItems.thumb_img_url}}"
+                            onerror="this.src='https://i.imgur.com/ziktI49.png'"></div>
                         <br>
                         <div class="t-text-[10px] sm:t-text-[15px]">
                             <span class="t-text-[15px] sm:t-text-[25px]">[{{racketItems.brand.k_name}}]</span><br>
