아티클작성자명제거

--- a/templates/article/articleContent.html
+++ b/templates/article/articleContent.html
@@ -18,7 +18,7 @@
         </div>
         <div class="my-2 ml-1">내용 : {{articleItems.content}}</div>
         <hr style="width:30%;border: dot solid lightgray 1px" class="mr-auto">
-        <div class="ml-1">작성자 : {{articleItems.visitorAccount.name}}
+        <div class="ml-1">작성자 :
             <img class="t-w-[22px] t-h-[22px] t-rounded-full t-object-fit t-inline-block"
                  src="{{ articleItems.visitorAccount.profile_img.url }}"/>
         </div>
