애드센스추가

--- a/templates/racket/racketMain.html
+++ b/templates/racket/racketMain.html
@@ -152,6 +152,9 @@
 
 {% block script %}
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9433470945620329"
+     crossorigin="anonymous"></script>
+
 <script>
 
 $('select[name=brand]').last().val('{{request.GET.sortBrand}}');
