--- a/templates/player/playerMain.html
+++ b/templates/player/playerMain.html
@@ -86,6 +86,10 @@
 
 
 {% block script %}
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9433470945620329"
+     crossorigin="anonymous"></script>
+
 <script>
 
 $('select[name=sort-select]').last().val('{{request.GET.sort}}');
