--- a/templates/article/articleContent.html
+++ b/templates/article/articleContent.html
@@ -34,7 +34,7 @@
         <div class="my-2 ml-1">답글 : {{item.content}}</div>
         <hr style="width:30%;border: dot lightgray 1px" class="mr-auto">
 
-        <div class="ml-1">작성자 : {{item.visitorAccount.name}}
+        <div class="ml-1">작성자 :
             <img class="t-w-[22px] t-h-[22px] t-rounded-full t-object-fit t-inline-block"
                  src="{{ item.visitorAccount.profile_img.url }}"/>
         </div>
