메인사진변경

--- a/templates/main.html
+++ b/templates/main.html
@@ -24,25 +24,25 @@
         <!-- Slides -->
         <div class="swiper-slide">
             <div>
-                <img src="https://i.ytimg.com/vi/NBJ9wL22L3g/maxresdefault.jpg"
+                <img src="https://firstsportz.com/wp-content/uploads/2022/01/Marin-Cilic-696x392.jpg"
                      class="t-block t-w-full t-object-cover t-z-0 t-rounded mb-1" style="aspect-ratio: 1.5 / 1;">
 
-                <span class="bg-warning "><I><b>- WILSON PROSTAFF RF 97 -</b></I></span>
+                <span class="bg-warning "><I><b>- HEAD PRESTIGE PRO 2022 -</b></I></span>
             </div>
         </div>
         <div class="swiper-slide">
 
 
-            <img src="https://www.tennisworldusa.org/imge/114645/stefanos-tsitsipas-opens-on-being-in-shock-and-disbelief-over-ashleigh-barty-news.jpg"
+            <img src="https://img.tennis-warehouse.com/reviews/PTP98-1.jpg"
                  class="t-block t-w-full t-object-cover t-z-0 t-rounded mb-1" style="aspect-ratio: 1.5 / 1;">
-            <span class="bg-warning "><I><b>- WILSON BLADE 98 -</b></I></span>
+            <span class="bg-warning "><I><b>- PRINCE PRO TOUR 98 -</b></I></span>
 
         </div>
         <div class="swiper-slide">
 
-            <img src="https://www.altoadige.it/image/contentid/policy:1.3113394:1643118616/image.jpg?a=191:100&q=0.6&w=1200&$p$a$q$w=e3c1d56"
+            <img src="https://static.independent.co.uk/s3fs-public/thumbnails/image/2016/07/03/20/nick-kyrgios3.jpg?quality=75&width=990&auto=webp&crop=982:726,smart"
                  class="t-block t-w-full t-object-cover t-z-0 t-rounded mb-1" style="aspect-ratio: 1.5 / 1;">
-            <span class="bg-warning "><I><b>- HEAD EXTREME TOUR -</b></I></span>
+            <span class="bg-warning "><I><b>- YONEX DR 98 -</b></I></span>
 
         </div>
 
