메인사진변경2

--- a/templates/main.html
+++ b/templates/main.html
@@ -24,7 +24,7 @@
         <!-- Slides -->
         <div class="swiper-slide">
             <div>
-                <img src="https://firstsportz.com/wp-content/uploads/2022/01/Marin-Cilic-696x392.jpg"
+                <img src="https://gemm.site/wp-content/uploads/2022/01/WhatsApp-Image-2022-01-22-at-6.57.48-PM.jpeg"
                      class="t-block t-w-full t-object-cover t-z-0 t-rounded mb-1" style="aspect-ratio: 1.5 / 1;">
 
                 <span class="bg-warning "><I><b>- HEAD PRESTIGE PRO 2022 -</b></I></span>
