애드센스추가

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,6 +22,9 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <link rel="shortcut icon" href="{% static 'favicon.ico' %}"/>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9433470945620329"
+     crossorigin="anonymous"></script>
+
 
 
 </head>
