네이버메타등록

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,6 +25,8 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9433470945620329"
      crossorigin="anonymous"></script>
 
+    <meta name="naver-site-verification" content="6f79bd0a96b260eb9d6cf9a51f4aebd4be076db3" />
+
 
 
 </head>
