--- a/templates/main.html
+++ b/templates/main.html
@@ -24,10 +24,10 @@
         <!-- Slides -->
         <div class="swiper-slide">
             <div>
-                <img src="https://gemm.site/wp-content/uploads/2022/01/WhatsApp-Image-2022-01-22-at-6.57.48-PM.jpeg"
+                <img src="https://static01.nyt.com/images/2022/02/28/multimedia/28tennis-onpro-medvedev-1/28tennis-onpro-medvedev-1-jumbo.jpg?quality=75&auto=webp"
                      class="t-block t-w-full t-object-cover t-z-0 t-rounded mb-1" style="aspect-ratio: 1.5 / 1;">
 
-                <span class="bg-warning "><I><b>- HEAD PRESTIGE PRO 2022 -</b></I></span>
+                <span class="bg-warning "><I><b>- TECHNIFIBRE RS 315 -</b></I></span>
             </div>
         </div>
         <div class="swiper-slide">
